[package]
name = "RustPrinter"
version = "0.1.0"
edition = "2021"

[dependencies.reqwest]
version = "0.12.8"
features = ["json", "cookies", "multipart", "stream"]

[dependencies.windows]
version = "0.58.0"
features = ["Win32_Foundation", "Win32_Graphics_Printing", "Win32_Graphics_Gdi","Win32_Security"]
[dependencies.tokio]
version = "1.40.0"
features = ["full"]
[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
log = "0.4.22"
regex = "1.11.0"
